<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.0.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.ivanfranchin</groupId>
    <artifactId>springboot-elk-prometheus-grafana</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>springboot-elk-prometheus-grafana</name>
    <description>Demo project for Spring Boot</description>

    <properties>
        <java.version>17</java.version>
        <jib-maven-plugin.version>3.3.1</jib-maven-plugin.version>
        <docker-image.prefix>ivanfranchin</docker-image.prefix>
    </properties>

    <modules>
        <module>movies-api</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>${jib-maven-plugin.version}</version>
                <configuration>
                    <to>
                        <image>${docker-image.prefix}/${project.artifactId}:${project.version}</image>
                    </to>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
